# oura-ring4-ble

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: apk-findings.md  protocol-notes.md
rust/src/: main.rs  native_read.rs
scripts/: build-linux-keepalive.sh  build-pi-keepalive.sh  pi-bluez-auto-agent.py  pi-bluez-dbus-packet-read.py  pi-bluez-gatt-read-dump.py  pi-bluez-zeroauth-stream.py  pi-install-zeroauth-service.sh  pi-manual-ring-read-console.py  pi-manual-ring-read.sh  pi-oura-gatt-diagnostic.py  pi-oura-provision-auth-key.py  pi-oura-raw-rpa-read-loop.py  pi-oura-raw-smp-probe.py  pi-oura-watch-loop.py  pi-zeroauth-chase.sh  pi-zeroauth-event-catalog.py  pi-zeroauth-log-summary.py  pi-zeroauth-next-cursor.py
src/oura_ring4_ble/: __init__.py  cli.py  client.py  corebluetooth.py  permissions.py  protocol.py
systemd/: oura-zeroauth-chase.service
tests/: test_cli.py  test_client.py  test_corebluetooth.py  test_pi_bluez_zeroauth_stream.py  test_pi_manual_ring_read_console.py  test_pi_oura_gatt_diagnostic.py  test_pi_oura_provision_auth_key.py  test_pi_oura_watch_loop.py  test_pi_raw_rpa_read_loop.py  test_pi_zeroauth_event_catalog.py  test_pi_zeroauth_log_summary.py  test_pi_zeroauth_next_cursor.py  test_protocol.py
